navbar.css [Fixed]: Fixed navbar overlap.

--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -71,7 +71,7 @@
 .nav-elements {
     position: absolute;
     right: 0;
-    top: 60px;
+    top: 80px;
     background-color: #cde2be;
     width: 0px;
     height: 100vh;
